# VulkanRenderer

./: .gitignore  CMakeLists.txt  CODEOWNERS  CompileShaders.bat  CompileShaders.sh  GenerateProject.bat  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/samsung/microbm/: MainActivity.java
android/app/src/main/res/drawable/: ic_launcher_background.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
assets/: CMakeLists.txt
assets/shaders/: common.glsl  cross.comp  deferred.frag  deferred_rayshadows.frag  gbuffer.frag  gbuffer.vert  screen.vert  screen_singlechannel.frag  shadowmap.vert
assets/shaders/shadows/: shadowsRayQuery.comp  shadows_denoise_atrous.comp  shadows_denoise_copy_shadow_tiles.comp  shadows_denoise_reprojection.comp  shadows_ray_resolve.comp  shadows_unpack.comp  shadows_upsample.comp
src/: CMakeLists.txt
src/application/: CMakeLists.txt  application.cpp  application.h
src/launcher/: CMakeLists.txt
src/launcher/android/: androidMain.cpp
src/launcher/win/: WinMain.cpp
src/model/: CMakeLists.txt  instance.cpp  instance.h  material.cpp  material.h  object.cpp  object.h  predefined.cpp
src/platform/: CMakeLists.txt  assetManager.h  context.cpp  context.h  inputHandler.h  memorybuffer.cpp  memorybuffer.h  utils.h  window.cpp  window.h
src/platform/android/: assetManager.cpp  context.cpp  context.h  util.h  window.cpp  window.h
src/platform/win/: assetManager.cpp  context.cpp  context.h  util.h  window.cpp  window.h
src/render/: rendergraph.cpp  rendergraph.h  renderpass.cpp  renderpass.h
src/rhi/: CMakeLists.txt  accelerationStructure.cpp  accelerationStructure.h  buffer.cpp  buffer.h  context.h  descriptor.cpp  descriptor.h  pipeline.cpp  pipeline.h  rendertarget.cpp  rendertarget.h  resources.h  texture.cpp  texture.h  transition.h
src/scene/: CMakeLists.txt  basicScene.cpp  basicScene.h  scene.cpp  scene.h  sceneLight.h  sceneView.cpp  sceneView.h  transition.cpp  transition.h
src/vulkan/: CMakeLists.txt  accelerationStructure.cpp  accelerationStructure.h  buffer.cpp  buffer.h  commandBuffer.cpp  commandBuffer.h  commandBufferManager.cpp  commandBufferManager.h  context.cpp  context.h  debug.cpp  debug.h  descriptor.cpp  descriptor.h  descriptorPool.cpp  descriptorPool.h  extension.cpp  extension.h  factory.cpp  framebuffer.cpp  framebuffer.h  image.cpp  image.h  indexBuffer.cpp  pipeline.cpp  pipeline.h  queue.cpp  queue.h  rendertarget.cpp  rendertarget.h  resources.h  storageBuffer.cpp  surface.cpp  surface.h  texture.cpp  texture.h  transition.cpp  transition.h  uniformBuffer.cpp  (+3 more)
src/vulkan/android/: androidSurface.cpp  vulkan_wrapper.cpp  vulkan_wrapper.h
src/vulkan/win/: vulkan_wrapper.h  windowSurface.cpp
